# routes/voucherRoutes.js
@@ -5,11 +5,13 @@ const {
   clippedVoucher,
   clippedDetails,
   getvoucherByStore,
+  getSingleVoucher,
 } = require("../controllers/voucher");
 const router = express.Router();
 const { protect } = require("../middleware/auth");
 
 router.route("/voucher").post(saveVoucherData).get(protect, getAllVoucher);
+router.route("/voucher/:id").get(getSingleVoucher);
 router.route("/voucherbystore/:id").get(getvoucherByStore);
 router.route("/voucher/clipped-for-later").post(protect, clippedVoucher);
 router.route("/voucher/clipped-details/:id").get(protect, clippedDetails);
