# swagger.json
@@ -566,6 +566,43 @@
         }
       }
     },
+    "/voucher/{id}": {
+      "get": {
+        "tags": ["Voucher"],
+        "summary": "Get Single voucher details!",
+        "description": "Get Single voucher details!",
+        "produces": ["application/json"],
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "description": "Use voucher id to get voucher details",
+            "type": "string",
+            "example": "665ccdea316ee50600aa3e30"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Voucher Details Succesfully retrive!",
+            "schema": {
+              "$ref": ""
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Clipped Details not found!"
+          }
+        }
+      }
+    },
     "/voucher/clipped-for-later": {
       "post": {
         "tags": ["Voucher"],
